--- a/BasicQuiz/assets/css/style.css
+++ b/BasicQuiz/assets/css/style.css
@@ -10,7 +10,7 @@ h1{
     font-family: ADV;
 }
 
-
+/* Used to check layout */
 /* div{
     border: 1px;
     border-style: solid;
@@ -40,13 +40,22 @@ h1{
     visibility: hidden;
 }
 
-.gameEND{
-    visibility: hidden;
-}
-
 .time{
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 20px;
     text-align: center;
     background-color: yellow;
+}
+
+.quiz{
+    visibility: hidden;
+    position: absolute;
+    top: -100px;
+    width: 600px;
+}
+
+.end{
+    visibility: hidden;
+    position: absolute;
+    top: 100px;
 }
